Fix wrapping + add hover effects

--- a/frontend/src/components/AllSpots/AllSpots.css
+++ b/frontend/src/components/AllSpots/AllSpots.css
@@ -62,6 +62,14 @@
 #spot-address {
     font-weight: 575;
     padding-bottom: 3px;
+    word-break: break-word;
+    max-height: calc(.9rem * 1.2 * 2);
+    overflow-y: scroll;
+    scrollbar-width: none;
+}
+
+#spot-address::-webkit-scrollbar {
+    display: none;
 }
 
 #spot-price {
